@@ -125,8 +125,7 @@ const char *lixa_strerror(int ret_cod)
             return "ERROR: generic error for a TX error (a TX return code "
                 "not equal TX_OK)";
         case LIXA_RC_XA_ERROR:
-            return "ERROR: generic error for an XA error (an XA return code "
-                "not equal XA_OK)";
+            return "ERROR: an XA function returned an unexpcted return code";
         case LIXA_RC_MALLOC_ERROR:
             return "ERROR: 'malloc' function returned an error condition";
         case LIXA_RC_REALLOC_ERROR:
