@@ -112,6 +112,7 @@
     "return XAER_NOTA to xa_end(): this might be a bug inside resource " \
     "manager code; this condition will not be " \
     "notified to the Application Program"
+#define LIXA_SYSLOG_LXC024E "LXC024E Resource Manager '%s' (rmid=%d) returned %d while performing xa_recover() with flags=0x%lx and count=%d"
 
 
 
